# strava-metrics

./: README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
src/: RunningAnalysis.ipynb  strava_api.py
src/.ipynb_checkpoints/: RunningAnalysis-checkpoint.ipynb
