[tool.poetry]
name = "strava-metrics"
version = "0.1.0"
description = ""
authors = ["Rob Duffy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipywidgets = "^8.1.2"
pandas = "^2.2.1"
requests = "^2.31.0"
ipydatagrid = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
